<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/baseline_access_time_white_48dp"
        android:title="@string/action_timer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/baseline_history_white_48dp"
        android:title="@string/action_history"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/baseline_settings_white_48dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"></item>

</menu>